@@ -18,7 +18,6 @@ import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.validation.ConstraintViolation;
 import javax.validation.Validator;
 
@@ -58,7 +57,7 @@ public class CaseProceedsInCasemanCallbackHandler extends CallbackHandler {
         CaseData caseData = callbackParams.getCaseData();
         List<String> errors = validator.validate(caseData, CasemanTransferDateGroup.class).stream()
             .map(ConstraintViolation::getMessage)
-            .collect(Collectors.toList());
+            .toList();
 
         return AboutToStartOrSubmitCallbackResponse.builder()
             .errors(errors)
